2003-07-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* executable.make: install-local depends on the program too.

2003-07-25  Peter Williams <peter@newton.cx>

	* rules.make (run-test): Make it depend on 'test-local'
	then 'run-test-local' after 'run-test-recursive'. This way,
	'make run-test' from the toplevel doesn't recurse through all
	the directories doing a make test before we run anything.

2003-07-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* rules.make: run-test depends now on 'test'.

2003-07-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* rules.make: set corlib to PLATFORM_CORLIB if this is defined.

2003-07-22  Peter Williams  <peter@newton.cx>

	* rules.make (withmcs): Add this developer utility target.

2003-07-20  Peter Williams  <peter@newton.cx>

	* README.platforms: Update docs for changes below.

	* platforms/win32.make (PLATFORM_CORLIB): Set this variable
	to 'mscorlib.dll', instead of $(corlib) which everything links
	against. *Almost* everything should link against our corlib --
	with the exception of corlib_cmp and corlib_res.

	* platforms/linux.make: Same here: corlib.dll

	* rules.make: Define $(corlib) here.

2003-07-20  Peter Williams  <peter@newton.cx>

	* config-default.make (TEST_RUNTIME): Use the platform runtime
	to run tests, by default.

	* profiles/default.make (TEST_RUNTIME): If our test runtime is
	mono, use the --debug flag.

	* executable.make (sourcefile): Add a basename so that we can
	find the nunit sources and so we behave a bit more like
	library.make

	* config-default.make (TEST_HARNESS): Find nunit-console in its
	new home.

2003-07-20  Peter Williams  <peter@newton.cx>

	* library.make ($(response)): Do a "Creating ..." line here.

	* executable.make ($(response)): Same.

	* config-default.make: Make warning more forceful.

	* rules.make: Define a useful 'PLATFORM_MONO_NATIVE' that is
	set if the platform does not have a native runtime (ie, linux).
	Also reorder some definitions.
